Fixed alignment of top row

--- a/Style.css
+++ b/Style.css
@@ -58,6 +58,10 @@ h4{
   padding-right: 15px;
 }
 
+.row_top {
+	padding-top: 5px;
+}
+
 div div div {
   border-radius: 5px;
   background-color: #c1c5c9;
@@ -113,7 +117,6 @@ table {
 
 
 td, th {
-	font-size: 100%;
 	padding-left: 5px;
 	padding-right: 5px;
 	outline: 2px solid black;
